profilelist1exp/unpackaged/objects/Opportunity_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Decision_10__c</fullName>
        <inlineHelpText>What actual decision gets made in this step?</inlineHelpText>
        <label>Actual Decision 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Decision_1__c</fullName>
        <inlineHelpText>What actual decision gets made in this step?</inlineHelpText>
        <label>Actual Decision 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Decision_2__c</fullName>
        <inlineHelpText>What actual decision gets made in this step?</inlineHelpText>
        <label>Actual Decision 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Background_Completed__c</fullName>
        <formula>(IF(ISBLANK( Nature_of_the_Opportunity__c ), 0, 1) +
IF(ISBLANK(Opportunity_Source__c), 0, 1) +
IF(ISBLANK(Opportunity_Contacts__c), 0, 1) +
IF(ISBLANK(Upcoming_Milestones__c), 0, 1) +
IF(ISBLANK( Selling_Barriers__c ), 0, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Background Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitive_Completed__c</fullName>
        <formula>(IF(ISBLANK( Strength_1__c ), 0, 1) +
IF(ISBLANK( Strength_2__c ), 0, 1) +
IF(ISBLANK( Weakness_1__c ), 0, 1) +
IF(ISBLANK( Weakness_2__c ), 0, 1) +

IF(ISBLANK( Competitor_A_Strength_1__c ), 0, 1) +
IF(ISBLANK( Competitor_A_Strength_2__c), 0, 1) +
IF(ISBLANK( Competitor_A_Weakness_1__c ), 0, 1) +
IF(ISBLANK( Competitor_A_Weakness_2__c ), 0, 1) +

IF(ISBLANK( Competitor_B_Strength_1__c ), 0, 1) +
IF(ISBLANK( Competitor_B_Strength_2__c), 0, 1) +
IF(ISBLANK( Competitor_B_Weakness_1__c ), 0, 1) +
IF(ISBLANK( Competitor_B_Weakness_2__c ), 0, 1) +

IF(ISBLANK( Primary_Competitor_A__c ), 0, 1) +
IF(ISBLANK( Primary_Competitor_B__c ), 0, 1) +
IF(ISBLANK( Our_Position_Approach__c ), 0, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitive Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_A_Strength_1__c</fullName>
        <inlineHelpText>Please describe a strength of our competitor solution.</inlineHelpText>
        <label>Strength 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_A_Strength_2__c</fullName>
        <inlineHelpText>Please describe a strength of our competitor solution.</inlineHelpText>
        <label>Strength 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_A_Weakness_1__c</fullName>
        <inlineHelpText>Please describe a weakness of our competitor solution.</inlineHelpText>
        <label>Weakness 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_A_Weakness_2__c</fullName>
        <inlineHelpText>Please describe a weakness of our competitor solution.</inlineHelpText>
        <label>Weakness 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_A_Weakness_3__c</fullName>
        <inlineHelpText>Please describe a weakness of our competitor solution.</inlineHelpText>
        <label>Weakness 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_B_Strength_1__c</fullName>
        <inlineHelpText>Please describe a strength of our competitor solution.</inlineHelpText>
        <label>Strength 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_B_Strength_2__c</fullName>
        <inlineHelpText>Please describe a strength of our competitor solution.</inlineHelpText>
        <label>Strength 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_B_Weakness_1__c</fullName>
        <inlineHelpText>Please describe a weakness of our competitor solution.</inlineHelpText>
        <label>Weakness 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_B_Weakness_2__c</fullName>
        <inlineHelpText>Please describe a weakness of our competitor solution.</inlineHelpText>
        <label>Weakness 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_B_Weakness_3__c</fullName>
        <inlineHelpText>Please describe a weakness of our competitor solution.</inlineHelpText>
        <label>Weakness 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Constraints_Validated__c</fullName>
        <inlineHelpText>Please indicate if the Customer has validated the constraints for these issues.</inlineHelpText>
        <label>Constraints Validated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constraints__c</fullName>
        <inlineHelpText>Please describe the constraints that would prevent the Customer from addressing the problem or achieving the result.</inlineHelpText>
        <label>Constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Context_Validated__c</fullName>
        <inlineHelpText>Please indicate if the Customer has validated the context for these issues.</inlineHelpText>
        <label>Context Validated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <inlineHelpText>Please describe who or what else is affected.  How does this align with the strategy of the organization, department or individual?</inlineHelpText>
        <label>Context</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_for_deciding_10__c</fullName>
        <inlineHelpText>What criteria will the Customer apply to make this decision?</inlineHelpText>
        <label>Criteria for deciding 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_for_deciding_1__c</fullName>
        <inlineHelpText>What criteria will the Customer apply to make this decision?</inlineHelpText>
        <label>Criteria for deciding 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_for_deciding_2__c</fullName>
        <inlineHelpText>What criteria will the Customer apply to make this decision?</inlineHelpText>
        <label>Criteria for deciding 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Problem_10__c</fullName>
        <inlineHelpText>Please describe a Customer problem or desired result our solution is intended to address.</inlineHelpText>
        <label>Customer Problem 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Problem_1__c</fullName>
        <inlineHelpText>Please describe a Customer problem or desired result our solution is intended to address.</inlineHelpText>
        <label>Customer Problem 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Problem_2__c</fullName>
        <inlineHelpText>Please describe a Customer problem or desired result our solution is intended to address.</inlineHelpText>
        <label>Customer Problem 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Reasons__c</fullName>
        <inlineHelpText>What are the Customer reasons that adoption our solution makes sense?</inlineHelpText>
        <label>Customer Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Results__c</fullName>
        <inlineHelpText>Please indicate if the opportunity was Won, Lost or Cancelled</inlineHelpText>
        <label>Deal Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Step_10__c</fullName>
        <inlineHelpText>What step the Customer will have to take in order to make a good decision in its own best interest?</inlineHelpText>
        <label>Decision Step 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Step_1__c</fullName>
        <inlineHelpText>What step the Customer will have to take in order to make a good decision in its own best interest?</inlineHelpText>
        <label>Decision Step 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Step_2__c</fullName>
        <inlineHelpText>What step the Customer will have to take in order to make a good decision in its own best interest?</inlineHelpText>
        <label>Decision Step 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Decisions_Completed__c</fullName>
        <formula>(IF(ISBLANK( Decision_Step_1__c ), 0, 1) +
IF(ISBLANK( Actual_Decision_1__c ), 0,1) +
IF(ISBLANK( When_1__c ), 0, 1) +
IF(ISBLANK( Who_is_involved_1__c ), 0, 1) +
IF(ISBLANK( Criteria_for_deciding_1__c ), 0, 1) +

IF(ISBLANK( Decision_Step_2__c ), 0, 1) +
IF(ISBLANK( Actual_Decision_2__c ), 0,1) +
IF(ISBLANK( When_2__c ), 0, 1) +
IF(ISBLANK( Who_is_involved_2__c ), 0, 1) +
IF(ISBLANK( Criteria_for_deciding_2__c ), 0, 1) +

IF(ISBLANK( Decision_Step_3__c ), 0, 1) +
IF(ISBLANK( Actual_Decision_3__c ), 0,1) +
IF(ISBLANK( When_3__c ), 0, 1) +
IF(ISBLANK( Who_is_involved_3__c ), 0, 1) +
IF(ISBLANK( Criteria_for_deciding_3__c ), 0, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decisions Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decisions_Validated__c</fullName>
        <inlineHelpText>Please validate if the Customer has validated the decision steps</inlineHelpText>
        <label>Decisions Validated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Plan__c</fullName>
        <inlineHelpText>Please describe our plan to deliver and measure results</inlineHelpText>
        <label>Delivery Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issues_Completed__c</fullName>
        <formula>(IF(ISBLANK( Customer_Problem_1__c ), 0, 1) +
IF(ISBLANK( Problem_Evidence_1__c ), 0,1) +
IF(ISBLANK( Problem_Impact_1__c ), 0, 1) +
IF(ISBLANK( Quantifiable_Benefit_1__c ), 0, 1) +

IF(ISBLANK( Customer_Problem_2__c ), 0,1) +
IF(ISBLANK( Problem_Evidence_2__c ), 0,1) +
IF(ISBLANK( Problem_Impact_2__c ), 0, 1) +
IF(ISBLANK( Quantifiable_Benefit_2__c ), 0, 1) +

IF(ISBLANK( Customer_Problem_3__c ), 0,1) +
IF(ISBLANK( Problem_Evidence_3__c ), 0,1) +
IF(ISBLANK( Problem_Impact_3__c ), 0, 1) +
IF(ISBLANK( Quantifiable_Benefit_3__c ), 0, 1) +

IF(ISBLANK( Context__c ), 0, 1) +
IF(ISBLANK( Constraints__c ), 0, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issues Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lessons_Learned__c</fullName>
        <inlineHelpText>Please describe what we learned from this won or lost opportunity and how we will improve in the future.</inlineHelpText>
        <label>Lessons Learned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Opportunity__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_210, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_210) -1) &amp; &apos;/&apos; &amp;Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Money__c</fullName>
        <inlineHelpText>Please enter the number of investment the Customer feels is appropiate to achieve the desired results.  Please also indicate if the Customer has established a budget for this effort.</inlineHelpText>
        <label>Money</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_of_the_Opportunity__c</fullName>
        <inlineHelpText>Please enter more details about the nature of the opportunity</inlineHelpText>
        <label>Nature of the Opportunity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Opportunities__c</fullName>
        <inlineHelpText>Please describe our plan to initiate new value-driven opportunities with this client.</inlineHelpText>
        <label>New Opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Onboard_Person_10__c</fullName>
        <inlineHelpText>How will you get this person onboard to make this opportunity happen?</inlineHelpText>
        <label>Onboard Person 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboard_Person_1__c</fullName>
        <inlineHelpText>How will you get this person onboard to make this opportunity happen?</inlineHelpText>
        <label>Onboard Person 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboard_Person_2__c</fullName>
        <inlineHelpText>How will you get this person onboard to make this opportunity happen?</inlineHelpText>
        <label>Onboard Person 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contacts__c</fullName>
        <inlineHelpText>Please enter the names of the people who you have spoken with at the client about this opportunity.</inlineHelpText>
        <label>Opportunity Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan_Name__c</fullName>
        <label>Opportunity Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <inlineHelpText>Please enter more detail on how the opportunity came about.</inlineHelpText>
        <label>Opportunity Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Our_Position_Approach__c</fullName>
        <inlineHelpText>Please describe our Position</inlineHelpText>
        <label>Our Position / Approach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Our_Solution__c</fullName>
        <inlineHelpText>What whe are offering in our solution to address the Customer situation?</inlineHelpText>
        <label>Our Solution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>People_Completed__c</fullName>
        <formula>(IF(ISBLANK( Person_1__c ), 0, 1) +
IF(ISBLANK( Onboard_Person_1__c ), 0,1) +
IF(ISBLANK(Person_2__c ), 0, 1) +
IF(ISBLANK(Onboard_Person_2__c ), 0, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>People Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>People__c</fullName>
        <inlineHelpText>Please describe what people resources the Customer is willing to commit to get the results?  Also describe the Customer&apos;s thoughts on how they would like to divide the efforts between their people and ours (70/30, 80/20, etc.)</inlineHelpText>
        <label>People</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>(Background_Completed__c + Issues_Completed__c + Resources_Completed__c + Decisions_Completed__c + People_Completed__c + Solution_Completed__c + Competitive_Completed__c ) / 58</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Validated__c</fullName>
        <formula>(IF( ISPICKVAL(  Problems_Results_Validated__c , &quot;Yes&quot;), 1, 0) +
IF( ISPICKVAL(  Problems_Results_Evidence_Validated__c  , &quot;Yes&quot;), 1, 0) +
IF( ISPICKVAL(  Problems_Results_Impact_Validated__c  , &quot;Yes&quot;), 1, 0) +
IF( ISPICKVAL( Context_Validated__c , &quot;Yes&quot;), 1, 0) +
IF( ISPICKVAL( Constraints_Validated__c , &quot;Yes&quot;), 1, 0) +
IF( ISPICKVAL( Resources_Validated__c , &quot;Yes&quot;), 1, 0) +
IF( ISPICKVAL( Decisions_Validated__c , &quot;Yes&quot;), 1, 0) +
IF( ISPICKVAL( Solution_Validated__c , &quot;Yes&quot;), 1, 0) +
IF( ISPICKVAL( Reasons_Validated__c , &quot;Yes&quot;), 1, 0))/9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Validated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Person_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter the name of a person at the Customer who needs to be onboard to win this opportunity</inlineHelpText>
        <label>Person 10</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Opportunity_Plans9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter the name of a person at the Customer who needs to be onboard to win this opportunity</inlineHelpText>
        <label>Person 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Opportunity_PlansxG39</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter the name of a person at the Customer who needs to be onboard to win this opportunity</inlineHelpText>
        <label>Person 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Opportunity_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor_A__c</fullName>
        <inlineHelpText>Please enter the name of our primary competitor for this Opportunity</inlineHelpText>
        <label>Primary Competitor A</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor_B__c</fullName>
        <inlineHelpText>Please enter the name of our primary competitor for this Opportunity</inlineHelpText>
        <label>Primary Competitor B</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Evidence_10__c</fullName>
        <inlineHelpText>Please describe the evidence that lets the Customer know this issue is a problem or how the Customer will know they are successful if they get the results they are looking to achieve.</inlineHelpText>
        <label>Problem Evidence 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Evidence_1__c</fullName>
        <inlineHelpText>Please describe the evidence that lets the Customer know this issue is a problem or how the Customer will know they are successful if they get the results they are looking to achieve.</inlineHelpText>
        <label>Problem Evidence 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Evidence_2__c</fullName>
        <inlineHelpText>Please describe the evidence that lets the Customer know this issue is a problem or how the Customer will know they are successful if they get the results they are looking to achieve.</inlineHelpText>
        <label>Problem Evidence 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Impact_10__c</fullName>
        <inlineHelpText>Please describe how much this problem is costing the Customer or the resulting payoff if success is achieved</inlineHelpText>
        <label>Problem Impact 10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Impact_1__c</fullName>
        <inlineHelpText>Please describe how much this problem is costing the Customer or the resulting payoff if success is achieved</inlineHelpText>
        <label>Problem Impact 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problem_Impact_2__c</fullName>
        <inlineHelpText>Please describe how much this problem is costing the Customer or the resulting payoff if success is achieved</inlineHelpText>
        <label>Problem Impact 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Problems_Results_Evidence_Validated__c</fullName>
        <inlineHelpText>Please indicate if the Customer has validated this evidences</inlineHelpText>
        <label>Problems/Results Evidence Validated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problems_Results_Impact_Validated__c</fullName>
        <inlineHelpText>Please indicate if the Customer has validated this impacts</inlineHelpText>
        <label>Problems/Results Impact Validated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problems_Results_Validated__c</fullName>
        <inlineHelpText>Please indicate if the Customer has validated this problem/results</inlineHelpText>
        <label>Problems/Results Validated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantifiable_Benefit_10__c</fullName>
        <inlineHelpText>Please enter the total amount the Customer will save or the payoff if success is achieved.  If there is not a quantifiable benefit, please leave this field blank.</inlineHelpText>
        <label>Quantifiable Benefit 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantifiable_Benefit_1__c</fullName>
        <inlineHelpText>Please enter the total amount the Customer will save or the payoff if success is achieved.  If there is not a quantifiable benefit, please leave this field blank.</inlineHelpText>
        <label>Quantifiable Benefit 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantifiable_Benefit_2__c</fullName>
        <inlineHelpText>Please enter the total amount the Customer will save or the payoff if success is achieved.  If there is not a quantifiable benefit, please leave this field blank.</inlineHelpText>
        <label>Quantifiable Benefit 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reasons_Validated__c</fullName>
        <inlineHelpText>Please indicate if the Customer has validated the reasons for selection our solution</inlineHelpText>
        <label>Reasons Validated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reasons__c</fullName>
        <inlineHelpText>Please describe the reasons we won or lost this opportunity.</inlineHelpText>
        <label>Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Plan__c</fullName>
        <inlineHelpText>Please describe our plan to make this Customer a referral Customer.</inlineHelpText>
        <label>Referral Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resources_Completed__c</fullName>
        <formula>(IF(ISBLANK( Time__c ), 0, 1) +
IF(ISBLANK( People__c ), 0,1) +
IF(ISBLANK( Money__c ), 0, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resources Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resources_Validated__c</fullName>
        <inlineHelpText>Please indicate if the Customer has validated the resources for this opportunity.</inlineHelpText>
        <label>Resources Validated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_Barriers__c</fullName>
        <inlineHelpText>Please enter the most significant selling barrier or challenge.</inlineHelpText>
        <label>Selling Barriers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Completed__c</fullName>
        <formula>(IF(ISBLANK( Our_Solution__c ), 0, 1) +
IF(ISBLANK( Customer_Reasons__c ), 0,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Validated__c</fullName>
        <inlineHelpText>Please indicate if the Customer has validated our solution</inlineHelpText>
        <label>Solution Validated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stay_in_Touch__c</fullName>
        <inlineHelpText>Please indicate if we should stay in touch with this Customer</inlineHelpText>
        <label>Stay in Touch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strength_1__c</fullName>
        <inlineHelpText>Please describe a strength of our solution.</inlineHelpText>
        <label>Strength 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strength_2__c</fullName>
        <inlineHelpText>Please describe a strength of our solution.</inlineHelpText>
        <label>Strength 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strength_3__c</fullName>
        <inlineHelpText>Please describe a strength of our solution.</inlineHelpText>
        <label>Strength 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strength_3_a__c</fullName>
        <inlineHelpText>Please describe a strength of our competitor solution.</inlineHelpText>
        <label>Strength 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strength_3_b__c</fullName>
        <inlineHelpText>Please describe a strength of our competitor solution.</inlineHelpText>
        <label>Strength 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <inlineHelpText>Please describe when the Customer is hoping to see the results in place (or get started).</inlineHelpText>
        <label>Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upcoming_Milestones__c</fullName>
        <inlineHelpText>Please enter all upcoming key milestones and deliverables</inlineHelpText>
        <label>Upcoming Milestones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weakness_1__c</fullName>
        <inlineHelpText>Please describe a weakness of our solution.</inlineHelpText>
        <label>Weakness 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weakness_2__c</fullName>
        <inlineHelpText>Please describe a weakness of our solution.</inlineHelpText>
        <label>Weakness 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Weakness_3__c</fullName>
        <inlineHelpText>Please describe a weakness of our solution.</inlineHelpText>
        <label>Weakness 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_10__c</fullName>
        <inlineHelpText>When this step will take place?</inlineHelpText>
        <label>When 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>When_1__c</fullName>
        <inlineHelpText>When this step will take place?</inlineHelpText>
        <label>When 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>When_2__c</fullName>
        <inlineHelpText>When this step will take place?</inlineHelpText>
        <label>When 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who_is_involved_10__c</fullName>
        <inlineHelpText>Who is involved in this decision step?</inlineHelpText>
        <label>Who is involved 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_involved_1__c</fullName>
        <inlineHelpText>Who is involved in this decision step?</inlineHelpText>
        <label>Who is involved 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_involved_2__c</fullName>
        <inlineHelpText>Who is involved in this decision step?</inlineHelpText>
        <label>Who is involved 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CR6684opptyplancreation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW()&amp;&amp;Opportunity__r.Opportunity_Plan_Roll_up_Summary__c &gt;=1</errorConditionFormula>
        <errorMessage>Only one opportunity plan can be created per opportunity.</errorMessage>
    </validationRules>
</CustomObject>